# from-darkness

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Debug Settings.props  Folder.DotSettings  Project Settings.props  PropertySheet.props  README.md  Release Settings.props  cmake-format.json  deps.vcxitems  deps_update.ps1  dll.vcxproj  dll.vcxproj.filters  entry.cpp  exe.vcxproj  from_darkness.sln  from_darkness.sln.DotSettings  main.cpp  main.h  pch.h
cmake/: CMakeLists.txt  init.cmake
impl/fd/: CMakeLists.txt  abstract_interface.h  algorithm.cpp  algorithm.h  application_info.ixx  assert.cpp  assert.h  assert_base.h  assert_data.h  assert_handler.cpp  assert_handler.h  assert_impl.cpp  assert_impl.h  basic_callback.h  basic_hook.h  basic_netvar_storage.h  cached_players_array.h  cached_players_range.h  call_cvs.h  call_type.h  callback.cpp  callback.h  callback_impl.h  callback_impl.ixx  callback_internal.h  chars_cache.h  chars_cache.ixx  class_info.h  comptr.h  console.cpp  console.h  convert_to.cpp  core.h  demangle_symbol.cpp  demangle_symbol.h  dll_notification.h  entity_cache.cpp  entity_cache.h  exception.cpp  filesystem.cpp  (+86 more)
impl/fd/_application_data/: application_data.cpp
impl/fd/_math/: vector3.cpp  vector4.ixx
impl/fd/_unused/: bitflag.h  static_vector.ixx
impl/fd/_valve/: DebugOverlay.cpp  EngineSound.cpp  EngineTrace.cpp  EngineTrace.ixx  Enums.hpp  GlowEffect.cpp  ModelInfoClient.cpp  ModelInfoClient.ixx  ModelRender.cpp  ModelRender.ixx  RenderView.cpp  Studio.ixx  StudioRender.cpp  StudioRender.ixx  VguiPanel.cpp  base_client.cpp  client_mode.cpp
impl/fd/application_info/: application_info.cpp  application_info.ixx
impl/fd/assert/: assert.cpp  assert.ixx  assert_impl.cpp  assert_impl.ixx  basic_assert.ixx
impl/fd/callback/: basic_callback.ixx  callback.ixx  callback_impl.ixx  callback_invoker.ixx  impl.h  internal.h
impl/fd/convert_to/: convert_to.ixx
impl/fd/core/: application_info.cpp  application_info.ixx  assert.cpp  assert.h  assert.ixx  bitflag.h  callback.h  callback.ixx  callback_impl.h  callback_impl.ixx  chars_cache.ixx  hashed_string.ixx  json.ixx  lazy_invoke.ixx  object.h  object_ex.h  one_instance.ixx  path.ixx  string_or_view.ixx  to_lower.cpp  to_lower.ixx  type_name.ixx  utility.h
impl/fd/ctype/: ctype.h  ctype.ixx
impl/fd/entity/: native_entity.h
impl/fd/entity_cache/: cached_entity.cpp  cached_entity.h  cached_player.cpp  cached_player.h  entity_index.h  native_entity_finder.h  player_index.h
impl/fd/external_interfaces/: C_BaseAnimating.cpp  C_BaseAnimating.ixx  C_BaseCombatCharacter.cpp  C_BaseCombatCharacter.ixx  C_BaseCombatWeapon.cpp  C_BaseCombatWeapon.ixx  C_BaseEntity.cpp  C_BaseEntity.ixx  C_BasePlayer.cpp  C_BasePlayer.ixx  C_CSPlayer.cpp  C_CSPlayer.ixx  C_WeaponCSBase.cpp  C_WeaponCSBase.ixx  LocalPlayer.cpp  LocalPlayer.ixx  base_animating.cpp  base_animating.ixx  base_combat_character.cpp  base_combat_character.ixx  base_combat_weapon.cpp  base_combat_weapon.ixx  base_player.cpp  base_player.ixx  cs_player.cpp  cs_player.ixx  d3d9.cpp  d3d9.ixx  local_player.cpp  local_player.ixx  weapon_cs_base.cpp  weapon_cs_base.ixx
impl/fd/filesystem/: filesystem.cpp  filesystem.ixx  path.ixx
impl/fd/formatting/: lazy.h  mixed.h  narrow.h  time.h  wide.h
impl/fd/functional/: bind.ixx  function.ixx  invoke.ixx  lazy_invoke.ixx  overload.ixx
impl/fd/gui/: basic_context.h  basic_input_handler.cpp  basic_input_handler.ixx  basic_menu.cpp  basic_menu.h  basic_tab.cpp  basic_tab.h  basic_tab_bar.cpp  basic_tab_bar.h  config.h  context.cpp  context.h  context.ixx  context_impl.cpp  context_impl.h  gui_context.cpp  gui_context.ixx  gui_context_impl.cpp  gui_context_impl.ixx  input_handler.cpp  input_handler.ixx  menu.cpp  menu.h  menu.ixx  menu_base.cpp  menu_base.h  menu_impl.cpp  menu_impl.h  menu_impl.ixx  render_interface.cpp  render_interface.ixx  renderable.h  system_interface.cpp  system_interface.ixx  tab.h  tab_bar.h  window.cpp
impl/fd/gui2/: checkbox.cpp  window.cpp  window.h
impl/fd/gui_interface/: basic_input_handler.cpp  basic_input_handler.ixx  basic_render_interface.cpp  basic_render_interface.ixx
impl/fd/hash/: hash.ixx
impl/fd/hooked/: hk_directx.cpp  hk_directx.h  hk_vgui_surface.cpp  hk_vgui_surface.h  hk_winapi.cpp  hk_winapi.h
impl/fd/hooking/: basic_hook.h  callback.h  hde.cpp  hde.h  holder.h  hook.cpp  hook.h  storage.cpp  storage.h
impl/fd/hooks/: helper.h  hook.cpp  hook.ixx  hook_base.ixx  hooks_loader.cpp  hooks_loader.ixx  impl.h
impl/fd/library_info/: basic.cpp  core.h  demangle_symbol.cpp  demangle_symbol.ixx  dos.cpp  dos.h  export.cpp  export.h  game_interface.cpp  game_interface.h  header.cpp  header.h  library.cpp  library.h  library_info.cpp  library_info.ixx  library_name.cpp  library_name.h  native.cpp  native.h  pattern.cpp  pattern.h  section.cpp  section.h  system.cpp  system.h  tag.h  vtable.cpp  vtable.h  wrapper.cpp  wrapper.h
impl/fd/logger/: basic_logger.ixx  last_error.cpp  logger.cpp  logger.ixx  logger_impl.ixx  logger_interface.cpp  logger_interface.ixx  object_logger.ixx  object_message.ixx.deprecated  system_console.cpp  system_console.ixx
impl/fd/logging/: core.cpp  core.h  data.h  default.h  init.cpp  init.h  internal.h  levels.h  logger.h  system_console.cpp  system_console.h
impl/fd/math/: matrix3x4.cpp  qangle.cpp  qangle.ixx  vector2.cpp  vector3.ixx  vector4.cpp  view_matrix.cpp  view_matrix.ixx
impl/fd/mem/: address.ixx  block.cpp  block.ixx  block_flags.cpp  mem_backup.ixx  mem_block.cpp  mem_block.ixx  mem_block_flags.cpp  mem_info.cpp  mem_info.ixx  mem_protect.cpp  mem_protect.ixx  mem_scanner.cpp  mem_scanner.ixx  protect.ixx  signature.cpp  signature.ixx
impl/fd/mem_protect/: mem_protect.cpp
impl/fd/netvars/: _basic_storage.ixx  _storage_dump.cpp  _storage_fill.cpp  basic_info.cpp  basic_info.h  basic_storage.cpp  core.h  (+44 more)
impl/imgui/: CMakeLists.txt
impl/targets/: CMakeLists.txt  console.cpp  dummy_logger.cpp  logger.cpp  main.cpp  own_backend.cpp  own_backend.h
projects/shared/: CMakeLists.txt
(+2717 files in other folders)
